# pdf-cli

./: .gitignore  README.md  pyproject.toml  ruff.toml
pdfcli/: app.py  utilities.py
tests/: conftest.py  test_cli.py  test_pdf.py
